--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "yiisoft/yii2": "2.*",
     "yiicod/yii2-cron": "1.*",
     "yiicod/yii2-base": "1.*",
-    "symfony/process": "~3.0|~4.0",
+    "symfony/process": "^5.4|^6.0",
     "predis/predis": "~1.1.0"
   },
   "require-dev": {
@@ -29,6 +29,11 @@
   "autoload": {
     "psr-4": {
       "yiicod\\socketio\\": "/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "yiisoft/yii2-composer": true
     }
   }
 }
